crates/ra_lsp_server/src/snapshots/test__snap_handles_macro_location.snap
---
source: crates/ra_lsp_server/src/cargo_check.rs
expression: diag
---
MappedRustDiagnostic {
    location: Location {
        uri: "file:///test/src/main.rs",
        range: Range {
            start: Position {
                line: 1,
                character: 4,
            },
            end: Position {
                line: 1,
                character: 26,
            },
        },
    },
    diagnostic: Diagnostic {
        range: Range {
            start: Position {
                line: 1,
                character: 4,
            },
            end: Position {
                line: 1,
                character: 26,
            },
        },
        severity: Some(
            Error,
        ),
        code: Some(
            String(
                "E0277",
            ),
        ),
        source: Some(
            "rustc",
        ),
        message: "can\'t compare `{integer}` with `&str`\nthe trait `std::cmp::PartialEq<&str>` is not implemented for `{integer}`",
        related_information: None,
        tags: None,
    },
    suggested_fixes: [],
}
